💾💄 Checkpoint ./script.js:22221649/337 ./index.html:22221649/145

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <script src="/script.js" defer></script>
   </head>
   <body>
-    
+    <div id="app">
+      {{hello}}
+    </div>
+    <v-btn @click=""></v-btn>
   </body>
 </html>
