🏢💽 Checkpoint ./index.html:22221649/267 ./script.js:22221649/319

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
   </head>
   <body>
     <div id="app">
-      {{hello}}
+      {{message}}
     </div>
-    <v-btn @click=""></v-btn>
+    <li v-for="item in data">
+      {{ item.message }}
+    </li>
+    <button v-on:click="reverseMessage">Reverse Message</button>
+    <div v-if="showText" {{ hello}} </div>
   </body>
 </html>
