🚴🏈 Checkpoint ./index.html:22221649/56 ./script.js:22221649/285

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       {{ item.message }}
     </li>
     <button v-on:click="reverseMessage">Reverse Message</button>
-    <div v-if="showText" {{ hello}} </div>
+    <div v-if="showText"> {{message}} </div>
   </body>
 </html>
